media-tools/maintainerr/deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: maintainerr
  namespace: media-tools
  annotations:
    keel.sh/policy: force
    keel.sh/match-tag: "true"
    keel.sh/trigger: poll
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: maintainerr
  template:
    metadata:
      labels:
        app: maintainerr
        name: maintainerr
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      automountServiceAccountToken: false
      priorityClassName: low-priority
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
              - key: kubernetes.io/arch
                operator: In
                values: 
                - 'amd64'
      containers:
      - name: maintainerr
        image: jorenn92/maintainerr:latest
        imagePullPolicy: Always
        # securityContext:
        #   allowPrivilegeEscalation: false
        #   readOnlyRootFilesystem: false
        #   seccompProfile:
        #     type: RuntimeDefault
        #   capabilities:
        #     drop: ["ALL"]
        #     add:
        #     - "CHOWN"
        #     - "SETGID"
        #     - "SETUID"
        #     - "DAC_OVERRIDE"
        resources:
          requests:
            cpu: 100m
            memory: 300Mi
          limits:
            cpu: 500m
            memory: 400Mi
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 60
          timeoutSeconds: 5
        volumeMounts:
        - name: maintainerr-config
          mountPath: /opt/data
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      volumes:
        - name: maintainerr-config
          persistentVolumeClaim:
            claimName: longhorn-maintainerr-config-pvc
