media-tools/maintainerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: maintainerr-service
  name: maintainerr-service
  namespace: media-tools
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: web
  selector:
    app: maintainerr
