media-tools/maintainerr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: maintainerr
  namespace: media-tools
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "maintainerr.ucdialplans.com"
  rules:
  - backendRefs:
    - name: maintainerr-service
      namespace: media-tools
      kind: Service
      port: 80
